@@ -1,6 +1,6 @@
 ##
 ## Tiny Aplication Collection Makefile
-## $Id: Makefile,v 1.8 2005/08/30 22:27:20 mina86 Exp $
+## $Id: Makefile,v 1.9 2005/09/22 17:13:28 mina86 Exp $
 ## Copyright (c) 2005 by Michal Nazareicz (mina86/AT/tlen.pl)
 ## Licensed under the Academic Free License version 2.1.
 ##
@@ -84,24 +84,26 @@ all: FvwmTransFocus cdiff cutcom infinite-logger installkernel.8.gz		\
 
 install: install-FvwmTransFocus install-add install-ai install-cdiff	\
          install-cdiff.sed install-check.sh install-checkmail			\
-         install-cpuload.sh install-cutcom install-genpass.sh			\
-         install-get_mks_vir_bases install-installkernel install-load	\
+         install-cpuload.sh install-cutcom install-extractlinks.pl		\
+         install-fortune install-genpass.sh install-get_mks_vir_bases	\
+         install-getlyrics.pl install-installkernel install-load		\
          install-malloc install-moz2elinks.pl install-mountiso			\
-         install-mpd-state install-null install-fortune install-rot13	\
-         install-settitle install-timer install-traf.sh					\
-         install-xcolor2rgb
+         install-mpd-state install-null install-pingrange.pl			\
+         install-rot13 install-settitle install-timer install-tpwd		\
+         install-traf.sh install-xcolor2rgb
 
 
 uninstall: uninstall-FvwmTransFocus uninstall-add uninstall-ai			\
            uninstall-cdiff uninstall-cdiff.sed uninstall-check.sh		\
            uninstall-checkmail uninstall-cpuload.sh uninstall-cutcom	\
+           uninstall-extractlinks.pl uninstall-fortune					\
            uninstall-genpass.sh uninstall-get_mks_vir_bases				\
-           uninstall-installkernel uninstall-load uninstall-malloc		\
-           uninstall-mountiso uninstall-moz2elinks.pl					\
+           uninstall-getlyrics.pl uninstall-installkernel				\
+           uninstall-load uninstall-malloc uninstall-moz2elinks.pl		\
            uninstall-mountiso uninstall-mpd-state uninstall-null		\
-           uninstall-fortune uninstall-rot13 uninstall-settitle			\
-           uninstall-timer uninstall-traf.sh uninstall-xcolor2rgb
-
+           uninstall-pingrange.pl uninstall-rot13 uninstall-settitle	\
+           uninstall-timer uninstall-tpwd uninstall-traf.sh				\
+           uninstall-xcolor2rgb
 
 
 ##
